Further edits throughout.

--- a/Pheno.bib
+++ b/Pheno.bib
@@ -1,3 +1,17 @@
+@article{Chen:2024cvu,
+    author = "Chen, Long and Czakon, Micha\l{} and Niggetiedt, Marco",
+    title = "{Renormalization of the pseudoscalar operator at four loops in QCD}",
+    eprint = "2410.18674",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TTK-24-42, P3H-24-076, MPP-2024-201",
+    doi = "10.1007/JHEP12(2024)045",
+    journal = "JHEP",
+    volume = "12",
+    pages = "045",
+    year = "2024"
+}
+
 @article{Gauld:2023zlv,
     author = "Gauld, R. and Gehrmann-De Ridder, A. and Glover, E. W. N. and Huss, A. and Garcia, A. Rodriguez and Stagnitto, G.",
     title = "{NNLO QCD predictions for Z-boson production in association with a charm jet within the LHCb fiducial region}",
